// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/abidkhalil/Documents/basic-react-app/src/components/molecules/ListItem/ListItem.test.js Should render 1`] = `
<ListItem
  name="Abid"
>
  <li
    className="ListItem"
  >
    <Hello
      isVisible={true}
      name="Abid"
    >
      <p
        className="HelloText"
      >
        Hello 
        Abid
      </p>
    </Hello>
    <Button
      action={[Function]}
      label="Show/Hide Abid"
    >
      <button
        className="Button"
        onClick={[Function]}
      >
        Show/Hide Abid
      </button>
    </Button>
  </li>
</ListItem>
`;

exports[`/Users/abidkhalil/Documents/basic-react-app/src/components/molecules/ListItem/ListItem.test.js should not show Hello 1`] = `
<ListItem
  name="Abid"
>
  <li
    className="ListItem"
  >
    <Button
      action={[Function]}
      label="Show/Hide Abid"
    >
      <button
        className="Button"
        onClick={[Function]}
      >
        Show/Hide Abid
      </button>
    </Button>
  </li>
</ListItem>
`;
